@startuml
title Cahier de Texte - Class Diagram

' Define classes
class Formateur {
    - id : int
    - nom : String
    - prenom : String
    - email : String
    + ajouterSeance(seance : Seance) : void
    + consulterSeances() : List<Seance>
}

class Seance {
    - id : int
    - date : LocalDate
    - heureDebut : LocalTime
    - heureFin : LocalTime
    - description : String
    + ajouterActivite(activite : Activite) : void
    + listerActivites() : List<Activite>
}

class Activite {
    - id : int
    - nom : String
    - description : String
    + afficherDetails() : String
}

' Define relationships
Formateur "1" -- "N" Seance : "Planifie"
Activite "1" -- "N" Seance : "Contient"

@enduml
